Setup Compiler Functions

--- a/Jax/CMakeLists.txt
+++ b/Jax/CMakeLists.txt
@@ -1,16 +1,15 @@
 file(GLOB_RECURSE JaxSources
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.c"
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.cxx"
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.h"
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/*.inl"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.c"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.cpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.cxx"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.h"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.hpp"
-	"${CMAKE_CURRENT_SOURCE_DIR}/**/*.inl"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Jax.cpp"
+
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/Platform.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/Assertion.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/Logger.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/Logger.cpp"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/FileIO.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Util/FileIO.cpp"
+
+	"${CMAKE_CURRENT_SOURCE_DIR}/Compiler/Compiler.h"
+	"${CMAKE_CURRENT_SOURCE_DIR}/Compiler/Compiler.cpp"
 )
 
 add_definitions(-DJAX_DEBUG)
